--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,36 @@
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
-
 body {
     background-image: url('../img/bg06.png');
     background-repeat: repeat;
-    padding-top: 54px;
-
+    padding-top: 56px;
     /* Margin bottom by footer height */
-    margin-bottom: 250px;
+    margin-bottom: 100px;
 }
 .thumbnail {
     border-radius: 9px;
 }
-
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    
     /* Set the fixed height of the footer here */
-    height: 250px;
+    height: 100px;
     background-color: #f5f5f5;
 }
-
 .footer .container {
-	margin: 20px 0px;
+    margin: 20px 0px;
+}
+.nav>li.current {
+    background-color: #E7E7E7;
+}
+.nav>li.current a {
+    color: #333;
+}
+
+#home, #about, #lab, #contact {
+    margin-top: -56px;
+    padding-top: 56px;
 }
